crates/panels/re_blueprint_tree/tests/snapshots/view_structure_test/query-to_the/multiple_proj.snap
---
source: crates/panels/re_blueprint_tree/tests/view_structure_test.rs
expression: blueprint_tree_data
---
root_container: ~
